try to fix backgroun-size:cover not work on mobile issue

--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+html {
+    min-height: 100%;
+}
+
 body {
     /* background-color: #111111; */
     color:#EEEEEE;
